--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,31 +26,7 @@
     </li>
   </ul>
   <hr />
-
-  <div class="flex justify-between">
-    <div>{{ activeCount }} items left</div>
-    <div class="space-x-3" *ngIf="filterType$ | async as filterType">
-      <button
-        (click)="setFilter('all')"
-        [ngClass]="{ 'font-bold': filterType === 'all' }"
-      >
-        All
-      </button>
-      <button
-        (click)="setFilter('active')"
-        [ngClass]="{ 'font-bold': filterType === 'active' }"
-      >
-        Active
-      </button>
-      <button
-        (click)="setFilter('completed')"
-        [ngClass]="{ 'font-bold': filterType === 'completed' }"
-      >
-        Completed
-      </button>
-    </div>
-    <button (click)="clear()">Clear</button>
-  </div>
+  <app-footer></app-footer>
 
   <router-outlet />
 </div>
